# smart_cs

./: .dockerignore  .env.example  .env.production.example  .gitignore  LICENSE  README.md  docker-compose.yml  environment.yml  run_backend_db.bat  run_seed_demo_data.bat  start_smartcs.bat  start_smartcs.ps1
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py
backend/app/agents/: graph_runtime.py  guardrails.py  langgraph_workflow.py  llm_planner.py  llm_router.py  nodes.py  orchestrator.py  plan_validator.py  planner.py  query_rewriter.py  router.py  state.py  stream_adapter.py
backend/app/api/: main.py
backend/app/auth/: __init__.py  context.py  dependencies.py  rbac.py  tokens.py
backend/app/core/: __init__.py  config.py  observability.py  services.py
backend/app/data/: __init__.py  postgres_repository.py  repository.py  seed.py
backend/app/evals/: harness.py  rag_eval.py
backend/app/llm/: provider.py
backend/app/models/: __init__.py  schemas.py
backend/app/observability/: __init__.py  metrics.py  trace_service.py
backend/app/rag/: __init__.py  document_version.py  embeddings.py  feedback.py  grounding.py  hybrid_retriever.py  knowledge_store.py  qdrant_store.py  reranker.py
backend/app/runtime/: __init__.py  redis_runtime.py
backend/app/state_machines/: __init__.py  case_state.py  errors.py  (+2 more)
backend/tests/: test_auth_rbac.py  test_case_task_runtime.py  test_eval_gates.py  test_eval_harness.py  test_router_guardrails.py  test_runtime_parity.py  test_state_machines.py  test_storage_adapters.py  test_tools_and_kb.py
(+85 files in other folders)
