[project]
name = "smartcs-agent-desk"
version = "0.1.0"
description = "Full-stack multi-agent e-commerce customer support desk"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "mcp>=1.2.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "qdrant-client>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
local-embeddings = [
    "sentence-transformers>=3.0.0",
]
qdrant = [
    "qdrant-client>=1.11.0",
]
postgres = ["psycopg[binary]>=3.2.0"]
redis = ["redis>=5.0.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
